--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "getlink_envato",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",  // Thêm dòng này để chỉ định là module ES
+  "type": "module",  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
