--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
-    "ora": "^8.2.0",
+    "ora": "^5.4.1",
     "p-queue": "^8.1.0",
     "puppeteer": "^24.6.1",
     "puppeteer-cluster": "^0.24.0",
@@ -21,5 +21,6 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "qs": "^6.14.0"
   },
-  "description": ""
+  "description": "",
+  "type": "module"
 }
